--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
             var api_address = "https://brain.pcsd.gov.ph/api/";
         }else {
-            // var api_address = "http://192.168.1.2/pcsds_api/";
-            var api_address = "http://localhost/pcsds_api/";
+            var api_address = "https://brain.pcsd.gov.ph/api/";
+            // var api_address = "http://localhost/pcsds_api/";
         }
     </script>
 
@@ -72,7 +72,12 @@
     <script src="js/webcam.min.js"></script>
     <script src="js/ng-camera.js"></script>
     <script src="js/ng-image-crop/ng-img-crop.js"></script>
-
+    
+    <!-- firebase -->
+    <script src="js/firebase/firebase-app.js"></script>
+    <script src="js/firebase/firebase-auth.js"></script>
+    <script src="js/firebase/firebase-firestore.js"></script>
+    <script src="js/firebase/init-firebase.js"></script>
     
 </head>
 
