--- a/app/permits/ltp_ao12.html
+++ b/app/permits/ltp_ao12.html
@@ -13,7 +13,7 @@
 
     <md-divider class="m-t-10 m-b-20"></md-divider>
     <!-- tittle -->
-    <h5 class="col-blue align-center">ONLINE APPLICATION FOR LOCAL TRANSPORT PERMIT OF REEF-FISH-FOR-FOOD</h5>
+    <h5 class="col-blue align-center">ONLINE APPLICATION FOR LOCAL TRANSPORT PERMIT OF WILDLIFE PRODUCTS</h5>
     <hr>
     <strong><small>Applicant :</small> {{application.data.application.applicant}} </strong> <br>
     <strong><small>Contact :</small> {{application.data.application.contact}} </strong> <br>
@@ -175,26 +175,26 @@
                 <br>
                 Expiration : <strong>{{application.expiration | date}}</strong>
             </md-card-content>
-        </md-card>
-    <md-divider class="m-t-20 m-b-20"></md-divider>
-
-    <!-- used stamp -->
-    <md-card class="m-b-20" ng-if="application.data.used != undefined">
-        <md-card-title>
-            <md-card-title-text>
-            <span class="md-headline">Permit Usage</span>
-            </md-card-title-text>
-        </md-card-title>
-        <md-card-content layout="row" layout-align="space-between">
-            <div flex layout="column">
-                <div flex>
-                    Date Used : <strong> {{application.data.used.date}} </strong> 
-                </div>
-                <div flex>
-                    Processed by : <strong>{{ application.data.used.staff }} </strong> 
-                </div>
-            </div>
-        </md-card-content>
-    </md-card>
+            </md-card>
+        <md-divider class="m-t-20 m-b-20"></md-divider>
     
-</div>
+        <!-- used stamp -->
+        <md-card class="m-b-20" ng-if="application.data.used != undefined">
+            <md-card-title>
+                <md-card-title-text>
+                <span class="md-headline">Permit Usage</span>
+                </md-card-title-text>
+            </md-card-title>
+            <md-card-content layout="row" layout-align="space-between">
+                <div flex layout="column">
+                    <div flex>
+                        Date Used : <strong> {{application.data.used.date}} </strong> 
+                    </div>
+                    <div flex>
+                        Processed by : <strong>{{ application.data.used.staff }} </strong> 
+                    </div>
+                </div>
+            </md-card-content>
+        </md-card>
+        
+    </div>
