--- a/app/permits/wfp.html
+++ b/app/permits/wfp.html
@@ -177,7 +177,7 @@
         <md-card>
             <md-card-content>
                 Approved by : <strong>{{ application.data.acknowledged.staff }} </strong>
-                , on  <strong>{{application.data.acknowledged.date.split(' ')[0]}}</strong>
+                , on  <strong>{{application.data.acknowledged.date}}</strong>
                 <br>
                 Expiration : <strong>{{application.expiration | date}}</strong>
             </md-card-content>
